--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="image-container">
-    <img class="image" src="img/weather_03_17_100149.gif">
+    <img class="image" src="img/weather_03_17_170534.gif">
     <div class="text-overlay-right">
 	  <p class="text-background-white">GEM 15km model 5-day cloud cover</p>
 	  <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
@@ -45,12 +45,12 @@
     <p>Specializing in geographic and scientific data on the web.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the entire American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts — the geographer’s bathroom reader. Retrieves and parses data on-the-fly from CIA World Factbook JSON files, with over 250 overview maps.</p><br>
-    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic overview of ASEAN nations from the latest official data, with a colorful ranking system and regional map.</p>
+    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the latest official data, with a colorful ranking system and regional map.</p>
   </div>
 
   <div class="flex-column">
 	<h2>Open Source</h2><hr>
-	<p>Sharing work and process on GitHub. See portfolio at <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
+	<p>Sharing process, intermediate data and results on GitHub. For an overview, see my portfolio at <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>My most used QGIS expressions, plus style files and screenshots.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>Useful commands and recipes for working with geospatial data in psql and bash.</p>
