--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
 	
   <div class="flex-column">
     <h2>Websites</h2><hr>
-    <p>Specializing in geographic and scientific data on the web.</p><br>
-    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the entire American Community Survey.</p><br>
+    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
+    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the latest American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts — the geographer’s bathroom reader. Retrieves and parses data on-the-fly from CIA World Factbook JSON files, with over 250 overview maps.</p><br>
     <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the latest official data, with a colorful ranking system and regional map.</p>
   </div>
 
   <div class="flex-column">
 	<h2>Open Source</h2><hr>
-	<p>Sharing process, intermediate data and results on GitHub. For an overview, see my portfolio at <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
+	<p>Sharing results and intermediate data with an engaged and knowledgeable community. For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
-    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>My most used QGIS expressions, plus style files and screenshots.</p><br>
-    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>Useful commands and recipes for working with geospatial data in psql and bash.</p>
+    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
+    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
   </div>
 
   <div class="flex-column">
 	<h2>Resources</h2><hr>
-    <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
+    <p>Access to global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
 
-    <p>Instant weather reports of wind, sky condition, temperature, dew point and more at over 5,000 <a href="https://aviationweather.gov/data/metar/" target="_blank">METAR stations</a> around the world.</p><br>
+    <p>Instant access to weather reports of wind, sky condition, temperature, dew point and more at over 5,000 <a href="https://aviationweather.gov/data/metar/" target="_blank">METAR stations</a> around the world.</p><br>
 
-    <p>Long-term trends in temperature and precipitation thru the <a href="https://www.ncei.noaa.gov/products/land-based-station/global-historical-climatology-network-monthly" target="_blank">Global Historical Climatology Network</a> and <a href="https://worldclim.org/data/index.html" target="_blank">WorldClim</a> datasets.</p><br>
+    <p>Benchmark long-term trends in temperature and precipitation thru the <a href="https://www.ncei.noaa.gov/products/land-based-station/global-historical-climatology-network-monthly" target="_blank">Global Historical Climatology Network</a> and <a href="https://worldclim.org/data/index.html" target="_blank">WorldClim</a> datasets.</p><br>
   </div>
  
 </div> <!--end flex-container-->
