--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h2>Websites</h2><hr>
     <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the latest American Community Survey.</p><br>
-    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts — the geographer’s bathroom reader. Retrieves and parses data on-the-fly from CIA World Factbook JSON files, with over 250 overview maps.</p><br>
+    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts—the geographer’s bathroom reader. Retrieves and parses data on-the-fly from CIA World Factbook JSON files, with over 250 overview maps.</p><br>
     <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the latest official data, with a colorful ranking system and regional map.</p>
   </div>
 
@@ -57,12 +57,43 @@
   </div>
 
   <div class="flex-column">
+	<h2>Tools</h2><hr>
+	<span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-red">QGIS</span><span class="tag-red">SAGA GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">R</span><span class="tag-blue">Shell</span>
+  </div>
+
+  <div class="flex-column">
 	<h2>Resources</h2><hr>
-    <p>Access to global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
+	<h3>Weather & Climate</h3>
+    <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
 
-    <p>Instant access to weather reports of wind, sky condition, temperature, dew point and more at over 5,000 <a href="https://aviationweather.gov/data/metar/" target="_blank">METAR stations</a> around the world.</p><br>
+    <p>Current weather reports of wind, sky condition, temperature, dew point and more at over 5,000 <a href="https://aviationweather.gov/data/metar/" target="_blank">METAR stations</a> around the world.</p><br>
 
-    <p>Benchmark long-term trends in temperature and precipitation thru the <a href="https://www.ncei.noaa.gov/products/land-based-station/global-historical-climatology-network-monthly" target="_blank">Global Historical Climatology Network</a> and <a href="https://worldclim.org/data/index.html" target="_blank">WorldClim</a> datasets.</p><br>
+    <p>Long-term trends in temperature and precipitation thru the <a href="https://www.ncei.noaa.gov/products/land-based-station/global-historical-climatology-network-monthly" target="_blank">Global Historical Climatology Network</a> and <a href="https://worldclim.org/data/index.html" target="_blank">WorldClim</a> datasets.</p><br>
+
+	<h3>Remote Sensing</h3>
+    <p>Global 30m Digital Terrain Model from the Japanese Aerospace Exploration Agency's <a href="https://www.eorc.jaxa.jp/ALOS/en/dataset/aw3d30/aw3d30_e.htm" target="_blank">ALOS World 3D -30m</a>.</p><br>
+    
+    <p>Global 90m and 30m Digital Elevation Model from NASA's Shuttle Radar Topography Mission <a href="https://www.earthdata.nasa.gov/sensors/srtm" target="_blank">SRTM</a>.</p><br>
+
+    <p>Medium-resolution multispectral imagery from NASA's workhorse <a href="https://landsat.gsfc.nasa.gov/" target="_blank">Landsat</a> program for land cover, forest management, biodiversity and more.</p><br>
+
+	<h3>Biodiversity</h3>
+    <p>Global compendium of hydrological and environmental characteristics for sub-basins, rivers and lakes at multiple scales from <a href="https://www.hydrosheds.org/hydroatlas" target="_blank">HydroATLAS</a>.</p><br>
+
+    <p>The WWF's <a href="https://www.worldwildlife.org/publications/terrestrial-ecoregions-of-the-world" target="_blank">Terrestrial Ecoregions of the World</a> provides a map of 867 terrestrial ecoregions, classified into 14 different biomes such as forests, grasslands or deserts for conservation and planning.</p><br>
+
+    <p>The Global Biodiversity Information Facility <a href="https://www.gbif.org/" target="_blank">GBIF</a> is an international network funded by the world's governments and aimed at providing open access to data about all types of life on Earth.</p><br>
+
+	<h3>Planning & Development</h3>
+    <p><a href="https://wiki.openstreetmap.org/wiki/Main_Page" target="_blank">OpenStreetMap</a> is a community-driven map of the world—the open source Google Maps—with extensive data on roads, buildings, places and more.</p><br>
+    
+    <p>Maps of population, demographics and dynamics from <a href="https://ghsl.jrc.ec.europa.eu/" target="_blank">Global Human Settlement Layer</a> and a focus on low and middle income countries from <a href="https://hub.worldpop.org/" target="_blank">WorldPop</a>.</p><br>
+
+    <p>The premier source for population and housing information on the US from the <a href="https://www.census.gov/programs-surveys/acs/" target="_blank">US Census American Community Survey</a>.</p><br>
+
+    <p><a href="https://wiki.openstreetmap.org/wiki/Main_Page" target="_blank">Wikidata</a> is the central storage for structured data of projects including Wikipedia, Wikivoyage, Wiktionary, Wikisource and others.</p><br>
+
+    <p><a href="https://www.cia.gov/the-world-factbook/" target="_blank">The World Factbook </a> provides basic intelligence on the history, people, government, economy, energy, geography, environment, communications, transportation, military, terrorism and transnational issues for 266 world entities.</p>
   </div>
  
 </div> <!--end flex-container-->
@@ -72,13 +103,13 @@
 <h2>About</h2>
 <hr>
 <p>Web developer and map maker with a background in Geography and English.</p>
-<h3 id="contact">EMAIL</h3>
+<h4 id="contact">EMAIL</h4>
 <a href="mailto:emailstevekim@gmail.com"><p>emailstevekim@gmail.com</p></a>
-<h3>TWITTER</h3>
+<h4>TWITTER</h4>
 <a href="https://twitter.com/newgeographer2" target="_blank"><p>@newgeographer2</p></a>
-<h3>GITHUB</h3>
+<h4>GITHUB</h4>
 <a href="https://github.com/geographyclub" target="_blank"><p>geographyclub</p></a>
-<h3>WEBSITES</h3>
+<h4>WEBSITES</h4>
 <a href="https://geographyclub.github.io/factbook/" onclick="closeMenu()" target="_blank"><p>World Factbook Scraper</p></a>
 <a href="https://geographyclub.github.io/american-geography/" onclick="closeMenu()" target="_blank"><p>American Geography</p></a>
 <a href="https://geographyclub.github.io/asean/" onclick="closeMenu()" target="_blank"><p>Asean Primer</p></a>
