--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 	
   <div class="flex-column">
     <h2>Websites</h2><hr>
-    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
+    <p>Publish geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the latest American Community Survey.</p><br>
-    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts—the geographer’s bathroom reader. Retrieves and parses data on-the-fly from CIA World Factbook JSON files, with over 250 overview maps.</p><br>
+    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts—the geographer’s bathroom reader. Retrieves and parses data on-the-fly from World Factbook JSON files, with over 250 overview maps.</p><br>
     <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the latest official data, with a colorful ranking system and regional map.</p>
   </div>
 
   <div class="flex-column">
 	<h2>Open Source</h2><hr>
-	<p>Sharing results and intermediate data with an engaged and knowledgeable community. For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
+	<p>Share results and intermediate data with an engaged and knowledgeable community. For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
@@ -71,7 +71,7 @@
     <p>Long-term trends in temperature and precipitation thru the <a href="https://www.ncei.noaa.gov/products/land-based-station/global-historical-climatology-network-monthly" target="_blank">Global Historical Climatology Network</a> and <a href="https://worldclim.org/data/index.html" target="_blank">WorldClim</a> datasets.</p><br>
 
 	<h3>Remote Sensing</h3>
-    <p>Global 30m Digital Terrain Model from the Japanese Aerospace Exploration Agency's <a href="https://www.eorc.jaxa.jp/ALOS/en/dataset/aw3d30/aw3d30_e.htm" target="_blank">ALOS World 3D -30m</a>.</p><br>
+    <p>Global 30m Digital Terrain Model from the Japanese Aerospace Exploration Agency's <a href="https://www.eorc.jaxa.jp/ALOS/en/dataset/aw3d30/aw3d30_e.htm" target="_blank">ALOS World 3D-30m</a>.</p><br>
     
     <p>Global 90m and 30m Digital Elevation Model from NASA's Shuttle Radar Topography Mission <a href="https://www.earthdata.nasa.gov/sensors/srtm" target="_blank">SRTM</a>.</p><br>
 
@@ -93,7 +93,7 @@
 
     <p><a href="https://wiki.openstreetmap.org/wiki/Main_Page" target="_blank">Wikidata</a> is the central storage for structured data of projects including Wikipedia, Wikivoyage, Wiktionary, Wikisource and others.</p><br>
 
-    <p><a href="https://www.cia.gov/the-world-factbook/" target="_blank">The World Factbook </a> provides basic intelligence on the history, people, government, economy, energy, geography, environment, communications, transportation, military, terrorism and transnational issues for 266 world entities.</p>
+    <p><a href="https://www.cia.gov/the-world-factbook/" target="_blank">The World Factbook </a> provides basic intelligence on the history, people, government, economy, energy, geography, environment, communications, transportation and transnational issues for 266 world entities.</p>
   </div>
  
 </div> <!--end flex-container-->
