--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="flex-container">
 	
   <div class="flex-column">
-    <h2>Websites</h2><hr>
+    <h2>Web Development</h2><hr>
     <p>Publish geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the latest American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts—the geographer’s bathroom reader. Retrieves and parses data on-the-fly from World Factbook JSON files, with over 250 overview maps.</p><br>
@@ -49,7 +49,7 @@
   </div>
 
   <div class="flex-column">
-	<h2>Open Source</h2><hr>
+	<h2>Open Sourcing</h2><hr>
 	<p>Share results and intermediate data with an engaged and knowledgeable community. For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
