--- a/index.html
+++ b/index.html
@@ -50,19 +50,15 @@
 
   <div class="flex-column">
 	<h2>Open Sourcing</h2><hr>
-	<p>Share results and intermediate data with an engaged and knowledgeable community. For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p><br>
+	<p>Share results and intermediate data with an engaged and knowledgeable community.</p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
-    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
+    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
+    <p>For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p>
   </div>
 
   <div class="flex-column">
-	<h2>Tools</h2><hr>
-	<span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-red">QGIS</span><span class="tag-red">SAGA GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">R</span><span class="tag-blue">Shell</span>
-  </div>
-
-  <div class="flex-column">
-	<h2>Resources</h2><hr>
+	<h2>Data Analysis</h2><hr>
 	<h3>Weather & Climate</h3>
     <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
 
@@ -95,7 +91,12 @@
 
     <p><a href="https://www.cia.gov/the-world-factbook/" target="_blank">The World Factbook </a> provides basic intelligence on the history, people, government, economy, energy, geography, environment, communications, transportation and transnational issues for 266 world entities.</p>
   </div>
- 
+
+  <div class="flex-column">
+	<h2>Tools</h2><hr>
+	<span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-red">QGIS</span><span class="tag-red">SAGA GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">R</span><span class="tag-blue">Shell</span>
+  </div>
+
 </div> <!--end flex-container-->
 
 <div class="flex-container">
