--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 	
   <div class="flex-column">
     <h2>Web Development</h2><hr>
-    <p>Publish geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
-    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving the latest American Community Survey.</p><br>
-    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts—the geographer’s bathroom reader. Retrieves and parses data on-the-fly from World Factbook JSON files, with over 250 overview maps.</p><br>
-    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the latest official data, with a colorful ranking system and regional map.</p>
+    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
+    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving figures from the latest American Community Survey.</p><br>
+    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
+    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>An economic summary of ASEAN nations compiled from the official website, with a colorful ranking system and custom regional map.</p>
   </div>
 
   <div class="flex-column">
-	<h2>Open Sourcing</h2><hr>
-	<p>Share results and intermediate data with an engaged and knowledgeable community.</p><br>
+	<h2>Open Source</h2><hr>
+	<p>Sharing results and intermediate data with an engaged and knowledgeable community.</p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
