--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
   </div>
 
   <div class="flex-column">
-	<h2>Open Source</h2><hr>
-	<p>Sharing results and intermediate data with an engaged and knowledgeable community.</p><br>
+	<h2>Education</h2><hr>
+	<p>Sharing my process and intermediate data with the open source community. Ask me how to reach an engaged and knowledgeable audience for your work.</p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
-    <p>For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p>
+    <p>For an overview of my open source repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p>
   </div>
 
   <div class="flex-column">
-	<h2>Data Analysis</h2><hr>
+	<h2>Spatial Analysis</h2><hr>
 	<h3>Weather & Climate</h3>
     <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution using the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
 
@@ -87,9 +87,6 @@
 
     <p>The premier source for population and housing information on the US from the <a href="https://www.census.gov/programs-surveys/acs/" target="_blank">US Census American Community Survey</a>.</p><br>
 
-    <p><a href="https://wiki.openstreetmap.org/wiki/Main_Page" target="_blank">Wikidata</a> is the central storage for structured data of projects including Wikipedia, Wikivoyage, Wiktionary, Wikisource and others.</p><br>
-
-    <p><a href="https://www.cia.gov/the-world-factbook/" target="_blank">The World Factbook </a> provides basic intelligence on the history, people, government, economy, energy, geography, environment, communications, transportation and transnational issues for 266 world entities.</p>
   </div>
 
   <div class="flex-column">
