--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
   </div>
 
   <div class="flex-column">
-	<h2>Education & Training</h2><hr>
-	<p>Sharing my process and intermediate data with the open source community. Ask me how to reach an engaged and knowledgeable audience for your work.</p><br>
+	<h2>Training</h2><hr>
+	<p>Documenting extensive tutorials on spatial software and sharing intermediate data with the open source community.</p><br>
     <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
-    <p>For an overview of my open source repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works.</a></p>
+    <p>For an overview of my open source repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>. (Ask me how to reach an engaged and knowledeable audience with your work.)</p>
   </div>
 
   <div class="flex-column">
