--- a/index.html
+++ b/index.html
@@ -21,40 +21,58 @@
 
 <div class="flex-container banner">
   <div class="flex-column-wide">
-    <h1>Spatial data consultant</h1>
-    <hr>
-    <p>Steve Kim</p>
-    <p>Toronto, Canada</p>
-    <p>Twitter: <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a></p>
-    <p>Email: <a href="mailto:emailstevekim@gmail.com">emailstevekim@gmail.com</a></p>
+    <h1>Spatial data consultant</h1><hr>
+    <div style="text-align:right; position:absolute; bottom:20px; right:20px;">
+      <p>Steve Kim</p>
+      <p>Toronto, Canada</p>
+    </div>
   </div>
 </div>
 
-<div class="image-container">
-    <img class="image" src="img/weather_03_17_170534.gif">
-    <div class="text-overlay-right">
-	  <p class="text-background-white">GEM 15km model 5-day cloud cover</p>
-	  <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
-	</div>
-</div>
-
 <div class="flex-container">
+
+  <div class="flex-column">
+    <div class="image-container">
+      <img class="image" src="img/weather_03_17_170534.gif">
+      <div class="text-overlay-right">
+	    <p class="text-background-white">GEM 15km model 5-day cloud cover</p>
+	    <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
+	  </div>
+    </div>
+  </div>
 	
   <div class="flex-column">
     <h2>Web Development</h2><hr>
-    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites for academic or commercial research.</p><br>
+    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites from academic or commercial research.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving figures from the latest American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
     <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with a colorful ranking system and custom regional map.</p>
   </div>
 
   <div class="flex-column">
-	<h2>Training</h2><hr>
-	<p>Writing tutorials on using software and creativity to solve all sorts of spatial problems. Sharing intermediate data with the open source community.</p><br>
-    <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
-    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
-    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
-    <p>For an overview of my open source repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>. (Ask me how to reach an engaged and knowledeable audience with your work.)</p>
+    <div class="image-container">
+      <img class="image" src="img/maps1.png">
+      <div class="text-overlay-right">
+	    <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
+	  </div>
+    </div>
+  </div>
+
+  <div class="flex-column">
+    <h2>Map making</h2><hr>
+    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites from academic or commercial research.</p><br>
+    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving figures from the latest American Community Survey.</p><br>
+    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
+    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with a colorful ranking system and custom regional map.</p>
+  </div>
+
+  <div class="flex-column">
+    <div class="image-container">
+      <img class="image" src="img/maps2.png">
+      <div class="text-overlay-right">
+	    <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
+	  </div>
+    </div>
   </div>
 
   <div class="flex-column">
@@ -73,7 +91,7 @@
 
     <p>Medium-resolution multispectral imagery from NASA's workhorse <a href="https://landsat.gsfc.nasa.gov/" target="_blank">Landsat</a> program for land cover, forest management, biodiversity and more.</p><br>
 
-	<h3>Biodiversity</h3>
+	<h3>Ecosystems</h3>
     <p>Global compendium of hydrological and environmental characteristics for sub-basins, rivers and lakes at multiple scales from <a href="https://www.hydrosheds.org/hydroatlas" target="_blank">HydroATLAS</a>.</p><br>
 
     <p>The WWF's <a href="https://www.worldwildlife.org/publications/terrestrial-ecoregions-of-the-world" target="_blank">Terrestrial Ecoregions of the World</a> provides a map of 867 terrestrial ecoregions, classified into 14 different biomes such as forests, grasslands or deserts for conservation and planning.</p><br>
@@ -85,13 +103,21 @@
     
     <p>Maps of population, demographics and dynamics from <a href="https://ghsl.jrc.ec.europa.eu/" target="_blank">Global Human Settlement Layer</a> and a focus on low and middle income countries from <a href="https://hub.worldpop.org/" target="_blank">WorldPop</a>.</p><br>
 
-    <p>The premier source for population and housing information on the US from the <a href="https://www.census.gov/programs-surveys/acs/" target="_blank">US Census American Community Survey</a>.</p><br>
-
+    <p>The premier source for population and housing information on the US from the <a href="https://www.census.gov/programs-surveys/acs/" target="_blank">US Census American Community Survey</a>.</p>
   </div>
 
   <div class="flex-column">
 	<h2>Tools</h2><hr>
-	<span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-red">QGIS</span><span class="tag-red">SAGA GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">R</span><span class="tag-blue">Shell</span>
+	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
+  </div>
+
+  <div class="flex-column">
+	<h2>Open Source</h2><hr>
+	<p>Documenting how to use spatial software and sharing intermediate data. Ask me how to reach an engaged and knowledeable audience thru open source.</p><br>
+    <p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
+    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
+    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
+    <p>For an overview of my repositories on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>.</p>
   </div>
 
 </div> <!--end flex-container-->
