--- a/index.html
+++ b/index.html
@@ -52,26 +52,20 @@
   <div class="flex-column">
     <div class="image-container">
       <img class="image" src="img/maps1.png">
-      <div class="text-overlay-right">
-	    <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
-	  </div>
     </div>
   </div>
 
   <div class="flex-column">
     <h2>Map making</h2><hr>
-    <p>Publishing geographic and scientific data on the web. Specializing in single-purpose data-driven websites from academic or commercial research.</p><br>
-    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Processing and serving figures from the latest American Community Survey.</p><br>
-    <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
+    <p>Making print and digital maps from spatial data. Specializing in </p><br>
+    <p><a href="https://github.com/geographyclub/qgis-expressions/tree/main/screens" target="_blank">A collection of images showing a range of features and styles possible in QGIS.</p><br>
+    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">World Factbook Scraper</a></p><p>A seemingly endless feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
     <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with a colorful ranking system and custom regional map.</p>
   </div>
 
   <div class="flex-column">
     <div class="image-container">
       <img class="image" src="img/maps2.png">
-      <div class="text-overlay-right">
-	    <p class="text-background-white">Natural Earth 10m hypsometric raster</p>
-	  </div>
     </div>
   </div>
 
