--- a/index.html
+++ b/index.html
@@ -55,12 +55,9 @@
 
   <div class="flex-column">
 	<h2 id="map">Map Making</h2><hr>
-    <p>Working in a number of styles: thematic, topographic, street and more. For a glimpse into how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
-  	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
-    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
-    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
-    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
-    <p>For an overview of my work on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>. Ask me how to reach an engaged and knowledeable audience thru open source.</p>
+    <p>Working in a number of styles: thematic, topographic, vector and more. For an overview of my work on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>.</p><br>
+    <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p><br>
+    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p>
   </div>
 
   <div class="flex-column">
@@ -82,12 +79,18 @@
   </div>
 
   <div class="flex-column">
-	<h2  id="tools">Tools</h2><hr>
+	<h2 id="tools">Open Source</h2><hr>
+	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
+	<p>For a glimpse into how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
+  	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
+    <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
+    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
+
 	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
   </div>
 
   <div class="flex-column">
-	<h2  id="data">Data Sources</h2><hr>
+	<h2 id="data">Data Sources</h2><hr>
     <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution from the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
 
     <p>Current weather reports at over 5,000 <a href="https://aviationweather.gov/data/metar/" target="_blank">METAR stations</a> around the world.</p><br>
