--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
   <div class="flex-column">
 	<h2 id="map">Map Making</h2><hr>
-    <p>Working in a number of styles: thematic, topographic, vector and more. For an overview of my work on GitHub, see <a href="https://geographyclub.github.io" target="_blank">Geography Works</a>.</p><br>
-    <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p><br>
-    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p>
+    <p>Working in a number of styles: thematic, topographic, vector and more.</p><br>
+    <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
+    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
+    <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p>
   </div>
 
   <div class="flex-column">
