--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="#" onclick="scrollToSection('map');">Map Making</a>
     <a href="#" onclick="scrollToSection('spatial');">Spatial Analysis</a>
     <a href="#" onclick="scrollToSection('tools');">Tools</a>
+    <a href="#" onclick="scrollToSection('open');">Open Source</a>
     <a href="#" onclick="scrollToSection('data');">Data Sources</a>
     <a href="#" onclick="scrollToSection('about');">About & Contact</a>
   </nav>
@@ -69,25 +70,27 @@
 
   <div class="flex-column">
 	<h2 id="spatial">Spatial Analysis</h2><hr>
+    <p>Over 15 years of spatial data processing and analysis with Linux scripting and spatial software.</p><br>
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from over 5,000 METAR stations around the world.</p><br>
-
 	<h3>Remote Sensing</h3>
     <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on medium-resolution multispectral imagery from Landsat and MODIS.</p><br>
-
 	<h3>Planning & Development</h3>
     <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city and beyond. For example, looking at the connection between amenities, infrastructure and other street-level data to population and housing data from the US Census American Community Survey.</p>
   </div>
 
   <div class="flex-column">
-	<h2 id="tools">Open Source</h2><hr>
+	<h2 id="tools">Tools</h2><hr>
+  	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
+  </div>
+
+  <div class="flex-column">
+	<h2 id="open">Open Source</h2><hr>
 	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
 	<p>For a glimpse into how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
-    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p><br>
-
-	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
+    <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
   </div>
 
   <div class="flex-column">
